Fix SplitButton spacing

--- a/src/components/Button/SplitButton/PrimaryButton/PrimaryButton.module.css
+++ b/src/components/Button/SplitButton/PrimaryButton/PrimaryButton.module.css
@@ -1,6 +1,5 @@
 .button {
     flex: 1;
-    padding-right: 0;
 }
 
 .button,
